archive/v2.0.1/README.md
<div align="center">

<img src="images/BiLivexlogo.jpg" alt="BiLivex Logo" width="110"/>

# BiLivex 🎮

**哔哩哔哩直播间增强插件（油猴 Tampermonkey）**

参考斗鱼 DouyuEx 插件开发，为 B 站直播间（live.bilibili.com）弹幕功能量身打造的增强脚本。

[![Greasy Fork](https://img.shields.io/badge/GreasyFork-590601-%23FB7299)](https://greasyfork.org/zh-CN/scripts/590601)
[![License: MIT](https://img.shields.io/badge/License-MIT-yellow.svg)](LICENSE)

</div>

---

## 📢 引言

各位玩小将，是否因为在 B 站看直播无法 **+1** 而手痒难耐？🖐️

管人痴，是否因为想在直播间臊皮、跟上弹幕节奏，却还要麻烦地复制粘贴？😩

那么，试试 **BiLivex** —— 弹幕一键 +1，带节奏从此告别复制粘贴！

## ✨ 核心功能

| 功能             | 说明                                                               |
| -------------- | ---------------------------------------------------------------- |
| **弹幕 +1**      | 鼠标悬停弹幕 → 弹幕高亮（插件设计的主题色）+ 下侧浮现「+1」按钮 → 点击后通过 B 站原生控件发送同内容弹幕，支持文字、普通表情与特殊表情 |
| **弹幕复制**       | 光标放置在右侧评论区时出现「复制」按钮，一键复制弹幕文本                                     |
| **弹幕小尾巴**      | 发送弹幕（+1 或自行输入）时自动在末尾附加预设文本（如「你好」→「你好喵」）；独立小窗口可开关 + 编辑文本          |
| **一键点赞 30 连击** | 一键连续点赞 30 次，点亮 B 站粉丝团灯牌                                          |
| **主题切换**       | 面板顶部一键切换「B 站蓝」/「B 站粉」主题，配色联动全局（标题 / 开关 / 按钮 / 弹幕高亮 / 反馈动画），设置持久化 |
| **侧边悬浮主菜单**    | 蓝 / 粉主题悬浮面板，置于直播间右侧，可折叠、可拖拽，所有设置自动保存                             |
| **弹幕收藏夹**        | 收藏常用弹幕，支持搜索、编辑、删除、导入导出，并可一键填入或发送                         |
| **自动检查更新**      | 周期检测新版本，发现更新时在悬浮球旁弹出提示，可一键打开油猴更新页升级                |

## 📸 效果预览

| 未开启面板                                                                                          | 开启面板（蓝色主题）                                                                                     |
| ---------------------------------------------------------------------------------------------- | ---------------------------------------------------------------------------------------------- |
| ![](images/preview-off.png) | ![](images/preview-on.png) |

## 📥 安装

### 方式一：Greasy Fork（推荐）

- 直达链接：https://greasyfork.org/zh-CN/scripts/590601
- 或直接在 Greasy Fork 搜索「BiLivex」安装

### 方式二：手动安装

1. 浏览器安装 Tampermonkey（油猴）扩展
2. 打开油猴管理面板 → 新建脚本 → 删除模板内容 → 粘贴 `bilive-enhance.user.js` 全部内容 → 保存
   （或直接双击 `.user.js` 文件，油猴会弹出安装页）
3. 打开任意 B 站直播间（live.bilibili.com/房间号），右侧出现 BiLivex 面板即生效

## 🎯 使用说明

- **评论区+1 / 复制**：鼠标放置到聊天区某条弹幕上，弹幕右侧浮现操作按钮
- **弹幕+1**：直播画面上飘过的弹幕，鼠标悬停即可冻结弹幕并 +1
- **小尾巴设置**：面板中「小尾巴」开关 + 「尾巴内容」输入框（默认「喵」）
- **自己的弹幕**：保留 B 站原生本人弹幕标识，不额外伪造样式
- **主题设置**：面板顶部切换蓝色 / 粉色主题，偏好自动保存
- **持久化**：所有设置自动保存（GM_setValue / GM_getValue），刷新 / 换房不丢失
- **弹幕收藏夹**：点击面板中的「收藏」打开收藏夹；支持关键词搜索、编辑、删除、导入导出。点击收藏文本可填入聊天框，点击「+1」可发送同内容弹幕。
- **自动检查更新**：每 1 小时自动检测一次新版本，发现更新时在悬浮球旁弹出提示；点击「忽略」不再提示该版本，点击「更新」在新标签页打开油猴更新页完成升级

## 🗺️ 开发计划

- [ ] **独轮车功能**：酌情开发，若违反社区条例则废除该计划 🚧

> 欢迎提交 Issue / PR，一起让 BiLivex 更好用！

## 📜 版本历史

<details>
<summary><b>v2.0.1 内测版</b>（2026-09-05）：修复悬停残框并复刻原生 +1 发送路径</summary>

- **v2.0.1 内测版**（2026-09-05）：
  - 修复鼠标移出漂浮弹幕后蓝色悬停框仍残留的问题；高亮只绘制在退出时销毁的 resident 副本上，不再改写原弹幕节点样式
  - 全屏模式补齐 B 站原生输入框与发送按钮识别，`+1` 统一走原生控件，不再使用接口兜底，确保播放器能够沿用本人弹幕原生蓝色标识
  - 支持普通图片表情、文字与表情混合弹幕的内容还原；特殊表情通过 B 站原生表情面板发送
  - 原生输入改用控件所属页面的 `InputEvent`，Enter 兜底补齐按下与抬起事件；全屏发送按钮增加限定范围内的兼容兜底
  - 悬停开始即固化文字与表情载荷，B 站回收弹幕节点后点击 `+1` 仍发送最初选中的内容；初始化异常会立即恢复源弹幕
  - 参考 [bili-danmu-plus1](https://github.com/ZYar-er/bili-danmu-plus1) 的原生发送和表情解析思路，并适配 BiLivex 的 iframe、resident 副本与小尾巴链路

</details>

<details>
<summary><b>v2.0.0 内测版</b>（2026-09-05）：重构 +1 与漂浮弹幕悬停底层逻辑</summary>

- **v2.0.0 内测版**（2026-09-05）：
  - 重构 +1 发送链路，优先使用 B 站原生聊天输入框和发送按钮，接口仅作为输入框不可用时的兜底
  - 重构漂浮弹幕悬停逻辑，使用独立 resident 副本支持长时间悬停保活，并兼容普通直播间、iframe、网页模式和全屏模式
  - 删除脚本伪造的本人弹幕蓝框，改为保留 B 站原生本人弹幕标识
  - 自动更新检测除每小时检测外，首次打开直播间和 SPA 切换新房间时立即检测
  - 保持收藏、主题色、小尾巴、点赞、界面和按钮等既有功能

</details>

<details>
<summary><b>v1.1.9</b>（2026-09-04）：修复 iframe 直播间网页全屏下悬停弹幕本体消失的问题；自己发送的弹幕蓝框不再误标他人相同内容</summary>

- **v1.1.9**（2026-09-04）：
  - 修复 iframe 直播间（活动 / 特殊直播间）网页大窗口 / 网页全屏模式下，悬停弹幕后弹幕本体消失、只剩操作栏的问题——悬停期间弹幕与操作栏同时完整可见，移开鼠标后原弹幕恢复滚动
  - 修复自己发送或 +1 过的弹幕文案，被其他人再次发送时会被误标蓝色边框的问题——现只有自己真正发送的弹幕才带蓝色边框，他人发送相同内容不再误标

- **v1.1.8**（2026-09-04）：
  - 修复 iframe 直播间网页大窗口 / 网页全屏模式下，悬停弹幕后「+1 / 收藏」操作栏不显示或被遮挡的问题——操作栏与悬停弹幕统一挂载，任何窗口模式下都完整可见
  - 修复网页全屏状态下悬停弹幕后弹幕本体消失、只剩操作栏的问题——悬停期间弹幕与操作栏同时完整可见，移开鼠标后原弹幕恢复滚动
  - 修复全屏 / 网页全屏模式下自己发送的漂浮弹幕没有蓝色边框的问题——本人弹幕在悬停与取消悬停后均保持蓝色边框
  - 修复 iframe 直播间贴近画面边缘的弹幕悬停后直接消失的问题——边缘弹幕悬停后按当前位置完整显示
  - 修复悬停带表情图 / 舰长徽章等富文本内容的弹幕时表情被放大、内容显示异常的问题——悬停弹幕与原弹幕外观保持一致

- **v1.1.3**（2026-09-03）：
  - 修复进入直播间时偶现的「操作栏被裁剪或遮挡」问题——刷新页才能恢复的现象消失，现在进入一次即可生效
  - 修复弹幕前面带舰长徽章 / 表情图等富文本前缀时悬停会看到两条重复且文本错位的问题——副本完整保留徽章等子节点结构，与源弹幕内容对齐
  - 修复自动更新检测过严问题——同一天内发布的新版本不再被「6 小时内查过」挡住；网络瞬时失败也只会记时间用于诊断、不再锁死后续检查；检测窗口缩短为 1 小时

- **v1.1.2**（2026-09-03）：
  - 修复网页全屏下屏幕上方、左侧、右侧约 1/5 区域内的漂浮弹幕，悬停后操作栏无法正常显示的问题——现边缘区域的弹幕悬停后，操作栏也会在屏幕内完整露出
  - 修复左右两侧弹幕悬停固定后操作栏被裁剪或遮挡的痕迹——现操作栏与弹幕分层展示，弹幕本身仍不超出直播画面，操作栏始终完整可见
  - 修复悬停后的弹幕在画面上/下区域的透明度与原弹幕不一致——现悬停弹幕保持与原弹幕一致的透明度，观感自然统一

- **v1.1.1**（2026-09-03）：
  - 修复悬停弹幕后滚动页面，弹幕吸附跟随指针、原位置残留副本的问题，现滚动页面即取消悬停，任何时刻只保留一个弹幕
  - 新增自动检查更新：发现新版本时在悬浮球旁弹出提示，可选择「忽略」或「更新」；点击「更新」在新标签页打开油猴更新页
</details>

<details>
<summary><b>旧版本</b>：v1.1.0 及更早版本</summary>

- **v1.1.0**（2026-09-01）：新增弹幕收藏夹，收藏内容长效保存；悬浮窗拖动更跟手

- **v1.0.11**（2026-08-29）：自己发送的弹幕用蓝色边框标出；修复分栏聊天区小尾巴不生效的问题

- **v1.0.10**（2026-08-15）：修复 iframe 直播间弹幕悬停判定区域偏移、弹幕与 +1 按钮间隙、全屏 +1 无法发送、边缘弹幕悬停文字超出画面等问题

- **v1.0.9**（2026-08-14）：修复长时间悬停弹幕文字消失、悬停弹幕动画恢复、小尾巴重复发送、顶部/底部特殊弹幕命中等问题

- **v1.0.8**（2026-08-13）：修复活动直播间悬浮球拖动弹跳、无法自由定位，以及展开菜单被强制吸附的问题

- **v1.0.7**（2026-08-12）：修复悬浮球右侧收起偏移、漂浮弹幕轻微抖动、弹幕悬停后超出直播画面、左上角闪现已结束弹幕、悬停弹幕与 +1 按钮间空隙导致取消悬停、部分场景 +1 按钮不显示等问题
- **v1.0.6**（2026-08-11）：修复开启插件后直播间漂浮弹幕数量明显变少的问题（评论区能看到消息但画面中弹幕大量缺失），弹幕显示恢复正常；保留悬停残留弹幕自动清理
- **v1.0.5**（2026-08-11）：修复鼠标在画面左上角滑移导致弹幕卡死（已滚出画面/即将结束的弹幕不再冻结，快速滑移自动释放）
- **v1.0.4**（2026-08-11）：修复鼠标在画面左上角滑移导致历史弹幕卡死（自动清理生命周期已结束的弹幕）、悬浮球吸附右侧时展开菜单方向错乱
- **v1.0.3**（2026-08-11）：折叠态悬浮球升级为圆形 logo；修复特殊直播间菜单被遮蔽、悬浮球拖动受限、菜单展开方向错乱、菜单超出网页边界等问题；展开菜单支持边缘吸附
- **v1.0.2**（2026-08-10）：发布版整理
- **v1.0.1**（2026-08-07）：修复面板重建时 document 级监听器累积泄漏、弹幕按钮重建时旧监听器未清理

</details>

## 🙏 致谢

- 灵感来源及代码设计参考自 **DouyuEx 作者小淳**：[Bilibili 空间](https://space.bilibili.com/193482)，感谢淳圣开源 💙
- 本项目约 80% 内容由 **vibe coding** 产出，欢迎使用、Star与转发！

---

<div align="center">

⭐ 如果这个插件帮到了你，欢迎 Star 支持一下！

</div>
